<!--  English Version  -->
<resources>
    <!--  Title Page  -->
    <string name="app_name">Over The Moon</string>
    <string name="settings_button">Settings</string>
    <string name="logo_text">Logo</string>
    <string name="sub_title">Everything you never wanted to know about the moon, and more!</string>
    <string name="title_activity_settings2">Settings</string>

    <!--  Data Page  -->
    <string name="start_button">Get Moondata</string>
    <string name="no_data_found">Mhm, seems there\'s no moon.</string>
    <string name="data_found">Data found!</string>
    <string name="error_text">That\'s no moon (no data found)</string>

    <string name="current_location">Your current location: </string>
    <string name="moonrise">The moon shall rise at: </string>
    <string name="moonset">And set again at: </string>
    <string name="altitude">The moon\'s altitude: </string>
    <string name="distance">The moon\'s distance: </string>

    <string name="standard_moonrise">The end of the afternoon </string>
    <string name="standard_moonset">The morning </string>
    <string name="standard_altitude">Pretty high</string>
    <string name="standard_distance">Pretty far</string>

    <!--  Settings  -->
    <string name="user_name">Your username</string>
    <string name="user_name_sum">Just for a friendly greeting.</string>
    <string name="standard_username">User</string>

    <string name="lat_default">Custom set Latitude</string>
    <string name="lat_default_sum">If no GPS-signal is found, this latitude will be set automatically.</string>
    <string name="standard_lat">0.0</string>

    <string name="lon_default">Custom set Longitude</string>
    <string name="lon_default_sum">If no GPS-signal is found, this longitude will be set automatically. </string>
    <string name="standard_lon">0.0</string>

    <string name="gps_request">GPS Permission</string>
    <string name="gps_request_sum">If you didn\'t give permission the first time, turning this setting on will give you a chance to give GPS Permission again </string>
</resources>
