<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Settings">

    <EditTextPreference
        android:defaultValue="Username"
        android:key="username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/user_name_sum"
        android:title="@string/user_name" />
    <EditTextPreference
        android:defaultValue= "0.0"
        android:key="custom_lon"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/lon_default_sum"
        android:title="@string/lon_default" />
    <EditTextPreference
        android:defaultValue="0.0"
        android:key="custom_lat"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/lat_default_sum"
        android:title="@string/lat_default" />
</PreferenceScreen>